--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
   <title>Document</title>
   <head>
     <title>오목 게임</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    <div id="board"></div>
-    <div id="result">게임 결과: </div>
-    <button id="restart">재시작</button>
-    <script src="app.js"></script>
+    <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+      <div class="board">
+          <!-- 보드에 대한 구성 요소 추가 -->
+      </div>
+      <div class="game-info">
+        <div id="winner-info"></div>
+        <button id="restart-button">게임 재시작</button>
+    </div>
+      <script src="script.js"></script>
+</body>
 </html>
